<resources>
    <string name="app_name">Intelligent TourGuide</string>
    <string name="hint_name">Name</string>
    <string name="hint_dob">Enter Age</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_gender">I am</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="btn_sign_up">Register !!</string>
    <string name="err_msg_name">Please enter a Name</string>
    <string name="err_msg_required">Valid Input Required</string>
    <string name="err_msg_email">Please enter a Valid Email</string>
    <string name="err_msg_password">Enter a Password</string>
    <string name="err_msg_dob">Enter a valid age</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_signup">No account yet? Create one</string>
    <string name="btn_link_login">Already a member? Login</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="todo">TODO</string>
    <string name="dummy_button">Dummy</string>

    <string name="title_activity_splach">SplachActivity</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
